--- a/Lectures/MyUtils/Project.toml
+++ b/Lectures/MyUtils/Project.toml
@@ -9,6 +9,7 @@ Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DocumenterCitations = "daee34ce-89f3-4625-b898-19384cb65244"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 Luxor = "ae8d54c2-7ccd-5906-9d76-62fc9837b5bc"
 Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
 MultilineStrings = "1e8d2bf6-9821-4900-9a2f-4d87552df2bd"
@@ -20,6 +21,7 @@ Colors = "0.12.11"
 DocumenterCitations = "1.3.5"
 HTTP = "1.10.15"
 Images = "0.26.1"
+InteractiveUtils = "1.11.0"
 Luxor = "4.1.0"
 Markdown = "1.11.0"
 MultilineStrings = "0.1.1"
