--- a/Lectures/Project.toml
+++ b/Lectures/Project.toml
@@ -1,9 +1,12 @@
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+HypertextLiteral = "ac1192a8-f4b3-4bfe-ba22-af5b92cd3ab2"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 Luxor = "ae8d54c2-7ccd-5906-9d76-62fc9837b5bc"
+MarkdownLiteral = "736d6165-7244-6769-4267-6b50796e6954"
 MyUtils = "5f08ea77-7f1f-482c-9564-31d94ae91ab8"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
+PlutoTeachingTools = "661c6b06-c737-4d37-b85c-46df65de6f69"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
