--- a/Lectures/MyUtils/Project.toml
+++ b/Lectures/MyUtils/Project.toml
@@ -8,6 +8,7 @@ Clang_jll = "0ee61d77-7f21-5576-8119-9fcc46b10100"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DocumenterCitations = "daee34ce-89f3-4625-b898-19384cb65244"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+HypertextLiteral = "ac1192a8-f4b3-4bfe-ba22-af5b92cd3ab2"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 Luxor = "ae8d54c2-7ccd-5906-9d76-62fc9837b5bc"
@@ -21,6 +22,7 @@ Clang_jll = "16.0.6"
 Colors = "0.12.11"
 DocumenterCitations = "1.3.5"
 HTTP = "1.10.15"
+HypertextLiteral = "0.9.5"
 Images = "0.26.1"
 InteractiveUtils = "1.11.0"
 Luxor = "4.1.0"
