--- a/.github/workflows/ExportPluto.yaml
+++ b/.github/workflows/ExportPluto.yaml
@@ -47,9 +47,15 @@ jobs:
               run: |
                 sudo apt install -y libomp-dev
                 whereis omp.h
+                ls /usr/lib/llvm-18/lib/clang/18/include/omp.h
+                ls /usr/include/omp.h
                 mkdir tmp
                 cd tmp
                 apt download libomp-18-dev
+                dpkg -c *
+                mkdir tmp
+                cd tmp
+                apt download libomp-dev
                 dpkg -c *
 
             - name: Instantiate
