--- a/.github/workflows/ExportPluto.yaml
+++ b/.github/workflows/ExportPluto.yaml
@@ -46,27 +46,9 @@ jobs:
             - name: Install LLVM OpenMP runtime
               shell: bash {0}
               run: |
-                sudo apt install -y hwloc # For lstopo
-                sudo apt install -y libomp-dev
-                whereis omp.h
-                ls /usr/lib/llvm-18/lib/clang/18/include/omp.h
-                cd examples
-                clang++ openmp_sum.cpp -fPIC -shared -fopenmp
-                clang++ openmp_sum.cpp -fPIC -shared -fopenmp=libomp
-                clang -x c++ openmp_sum.cpp -fPIC -shared -fopenmp
-                clang -x c++ openmp_sum.cpp -fPIC -shared -fopenmp=libomp
-                clang++ openmp_sum.cpp -fPIC -shared -fopenmp -I/usr/lib/llvm-18/lib/clang/18/include
-                clang++ openmp_sum.cpp -fPIC -shared -fopenmp=libomp -I/usr/lib/llvm-18/lib/clang/18/include
-                clang -x c++ openmp_sum.cpp -fPIC -shared -fopenmp -I/usr/lib/llvm-18/lib/clang/18/include
-                clang -x c++ openmp_sum.cpp -fPIC -shared -fopenmp=libomp -I/usr/lib/llvm-18/lib/clang/18/include
-                mkdir tmp
-                cd tmp
-                apt download libomp-18-dev
-                dpkg -c *
-                mkdir tmp
-                cd tmp
-                apt download libomp-dev
-                dpkg -c *
+                sudo apt-get install -y hwloc # For lstopo
+                sudo apt-get install -y openmpi-bin libopenmpi-dev
+                sudo apt-get install -y libomp-dev
 
             - name: Instantiate
               run: |
