--- a/Lectures/Project.toml
+++ b/Lectures/Project.toml
@@ -6,7 +6,9 @@ Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 Luxor = "ae8d54c2-7ccd-5906-9d76-62fc9837b5bc"
 MarkdownLiteral = "736d6165-7244-6769-4267-6b50796e6954"
 MyUtils = "5f08ea77-7f1f-482c-9564-31d94ae91ab8"
+OpenCL = "08131aa3-fb12-5dee-8b74-c09406e224a2"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 PlutoTeachingTools = "661c6b06-c737-4d37-b85c-46df65de6f69"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+pocl_jll = "627d6b7a-bbe6-5189-83e7-98cc0a5aeadd"
