Move kernel to separate file

--- a/examples/OpenCL/vadd/Makefile
+++ b/examples/OpenCL/vadd/Makefile
@@ -1,13 +1,12 @@
-
 ifndef CC
-	CC = gcc
+	CC = clang
 endif
 
-CCFLAGS=-O3 -lm
+CCFLAGS=-O3 -lm -DCL_TARGET_OPENCL_VERSION=300
 
 LIBS = -lOpenCL -fopenmp
 
-COMMON_DIR = ../../C_common
+COMMON_DIR = ../common
 
 # Change this variable to specify the device type
 # to the OpenCL device type of choice. You can also
@@ -23,11 +22,10 @@ ifeq ($(PLATFORM), Darwin)
 	LIBS = -framework OpenCL 
 endif
 
-CCFLAGS += -D DEVICE=$(DEVICE)
+CCFLAGS += -DDEVICE=$(DEVICE)
 
 vadd_chain: vadd_chain.c $(COMMON_DIR)/device_info.c
 	$(CC) $^ $(CCFLAGS) $(LIBS) -I $(COMMON_DIR) -o $@
-
 
 clean:
 	rm -f vadd_chain
