Progress on 4_gpu

--- a/Lectures/Project.toml
+++ b/Lectures/Project.toml
@@ -1,9 +1,12 @@
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 HypertextLiteral = "ac1192a8-f4b3-4bfe-ba22-af5b92cd3ab2"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 Luxor = "ae8d54c2-7ccd-5906-9d76-62fc9837b5bc"
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 MarkdownLiteral = "736d6165-7244-6769-4267-6b50796e6954"
 MyUtils = "5f08ea77-7f1f-482c-9564-31d94ae91ab8"
 OpenCL = "08131aa3-fb12-5dee-8b74-c09406e224a2"
