--- a/.github/workflows/ExportPluto.yaml
+++ b/.github/workflows/ExportPluto.yaml
@@ -5,6 +5,8 @@ on:
         branches:
             - main
             - master
+    pull_request:
+        types: [opened, synchronize, reopened]
     workflow_dispatch:
 
 # When two jobs run in parallel, cancel the older ones, to make sure that the website is generated from the most recent commit.
@@ -47,12 +49,11 @@ jobs:
             - name: Ignore notebook state cache in export
               run: echo 'pluto_state_cache' >> .gitignore
 
-            - name: Install LLVM OpenMP runtime
+            - name: Install OpenMPI and hwloc
               shell: bash {0}
               run: |
                 sudo apt-get install -y hwloc # For lstopo
                 sudo apt-get install -y openmpi-bin libopenmpi-dev
-                sudo apt-get install -y libomp-dev
 
             - name: Instantiate
               run: |
@@ -84,6 +85,7 @@ jobs:
 
             - name: Deploy to gh-pages
               uses: JamesIves/github-pages-deploy-action@releases/v4
+              if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
               with:
                   token: ${{ secrets.GITHUB_TOKEN }}
                   branch: gh-pages
