--- a/Lectures/MyUtils/Project.toml
+++ b/Lectures/MyUtils/Project.toml
@@ -11,6 +11,7 @@ HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 HypertextLiteral = "ac1192a8-f4b3-4bfe-ba22-af5b92cd3ab2"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
+LLVMOpenMP_jll = "1d63c593-3942-5779-bab2-d838dc0a180e"
 Luxor = "ae8d54c2-7ccd-5906-9d76-62fc9837b5bc"
 Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
 MultilineStrings = "1e8d2bf6-9821-4900-9a2f-4d87552df2bd"
@@ -24,6 +25,7 @@ HTTP = "1.10.15"
 HypertextLiteral = "0.9.5"
 Images = "0.26.1"
 InteractiveUtils = "1.10"
+LLVMOpenMP_jll = "18.1.8"
 Luxor = "4.1.0"
 Markdown = "1.10"
 MultilineStrings = "0.1.1"
